# npGUI

./: .gitattributes  .gitignore  Licence.txt  README.md  pyproject.toml
demo/clock/: clock.py
demo/puzzles/: puzzles.py
doc/source/: conf.py  index.rst
docs/: genindex.html  index.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/np_gui/: image_annotation.html  np_clickable_image.html
docs/_static/: custom.css
np_gui/: __init__.py  colors.py  image_annotation.py  np_clickable_image.py
np_gui/alphabet/: liberation_serif_alphabet_data  my_alphabet_liberation_serif.odt
np_gui/alphabet/liberation_serif/: metadata.csv  transcription.txt
np_gui/alphabet/utf8_sequence_0-0x10ffff_assigned_printable/: LICENSE  utf8_sequence_0-0x10ffff_assigned_printable.txt
sphinx/: Makefile
sphinx/source/: conf.py
tests/: center_in_shape_test.py  resize_test.py
