[tool.poetry]
name = "np_gui"
version = "0.0.3"
description = "This package implements Graphical User Interfaces from a NumPy user perspective."
authors = ["Gaël Cousin <gcousin333@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "np_gui"}]


[tool.poetry.dependencies]
python = "^3.10.6"
typeguard = "^3.0.0"
numpy = "^1.21.0"
matplotlib = "^3.0.0"
scikit-image = "0.19.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.1.3"
autodocsumm = "^0.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
